[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/background-day.png" type="Texture" id=1]
[ext_resource path="res://Flappy.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Game.gd" type="Script" id=3]
[ext_resource path="res://fonts/flappyfont.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://sprites/message.png" type="Texture" id=5]
[ext_resource path="res://sprites/gameover.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 45
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 4 )

[node name="Game" type="Node"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="PipeTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="GroundTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="CanvasLayer"]
margin_left = 80.0
margin_top = 24.0
margin_right = 200.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="Flappy" parent="." instance=ExtResource( 2 )]
position = Vector2( 70, 233 )

[node name="StartMessage" type="CanvasLayer" parent="."]

[node name="Message" type="Sprite" parent="StartMessage"]
position = Vector2( 144, 296 )
texture = ExtResource( 5 )

[node name="Tween" type="Tween" parent="StartMessage"]

[node name="Menus" type="CanvasLayer" parent="."]
visible = false

[node name="HiScore" type="Label" parent="Menus"]
margin_left = 80.0
margin_top = 197.0
margin_right = 212.0
margin_bottom = 222.0
rect_pivot_offset = Vector2( 72, 8 )
custom_fonts/font = SubResource( 2 )
text = "Hi Score: 0"
align = 1
valign = 1

[node name="LastScores" type="Label" parent="Menus"]
margin_left = 70.0
margin_top = 248.0
margin_right = 223.0
margin_bottom = 273.0
rect_pivot_offset = Vector2( 72, 8 )
custom_fonts/font = SubResource( 2 )
text = "Last scores:"
align = 1
valign = 1

[node name="ScoreList" type="Label" parent="Menus"]
margin_left = 70.0
margin_top = 288.0
margin_right = 223.0
margin_bottom = 369.0
rect_pivot_offset = Vector2( 72, 8 )
custom_fonts/font = SubResource( 2 )
text = "00
00
00"
align = 1
valign = 1

[node name="Gameover" type="Sprite" parent="Menus"]
position = Vector2( 144, 136 )
texture = ExtResource( 6 )

[node name="Button" type="Button" parent="Menus"]
margin_left = 75.0
margin_top = 392.0
margin_right = 219.0
margin_bottom = 440.0
custom_fonts/font = SubResource( 3 )
text = "RESTART"

[connection signal="timeout" from="PipeTimer" to="." method="_on_PipeTimer_timeout"]
[connection signal="timeout" from="GroundTimer" to="." method="_on_GroundTimer_timeout"]
[connection signal="game_over" from="Flappy" to="." method="_on_Flappy_game_over"]
[connection signal="game_start" from="Flappy" to="." method="_on_Flappy_game_start"]
[connection signal="point" from="Flappy" to="." method="_on_Flappy_point"]
[connection signal="pressed" from="Menus/Button" to="." method="_on_Button_pressed"]
